[#298] 피드뷰 리디자인
### Description
- 새로운 데이터 형식에 맞게 더미 만듦
- 기존 데이터 모델 삭제함에 따라 기존 데이터 형식 포함하고 있는 파일들 삭제, 수정
- 내 서랍장 new 표시 로직
- 셀 데이터 연결
- 초이 따라서 Size Enum 만듦 ~~!

### Related Issue
Resolve #298

--- a/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
@@ -39,7 +39,7 @@
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VN-3I-WEj">
                                 <rect key="frame" x="0.0" y="-6" width="414" height="50"/>
-                                <color key="backgroundColor" red="1" green="0.85490196078431369" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.94901960780000005" blue="0.81568627449999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="B4g-TN-APh"/>
                                 </constraints>
@@ -73,7 +73,7 @@
                     <navigationItem key="navigationItem" id="Dfe-iY-ofB"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="feedCollectionView" destination="wtu-1M-Hvm" id="ike-H7-BjW"/>
+                        <outlet property="feedCollectionView" destination="wtu-1M-Hvm" id="650-hb-HAv"/>
                         <outlet property="floatingTopButton" destination="zJm-TA-3Ki" id="b1Y-lZ-YvD"/>
                         <outlet property="statusBarView" destination="0VN-3I-WEj" id="kRU-Cn-K1y"/>
                     </connections>
