--- a/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
@@ -7,6 +7,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Code View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -16,63 +24,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0H-qs-Fvj">
-                                <rect key="frame" x="24" y="82" width="195" height="43"/>
-                                <string key="text">등록된 이메일로
-당신에게 인증번호를 보냈어</string>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증번호가 전송되었습니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0H-qs-Fvj">
+                                <rect key="frame" x="24" y="82" width="254" height="28"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="22"/>
                                 <color key="textColor" name="Black1Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증번호를 입력해 주겠어?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unh-NZ-zQn">
-                                <rect key="frame" x="24" y="179" width="189.5" height="21.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" name="Black1Text"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일로 전송된 인증번호를 입력해주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unh-NZ-zQn">
+                                <rect key="frame" x="24" y="126" width="210" height="15.5"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                <color key="textColor" name="black4Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C2e-eM-amu">
-                                <rect key="frame" x="24" y="232.5" width="366" height="18.5"/>
+                                <rect key="frame" x="24" y="238.5" width="366" height="18.5"/>
                                 <color key="textColor" name="Black1Text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFP-bz-viz">
-                                <rect key="frame" x="24" y="261" width="366" height="1"/>
+                                <rect key="frame" x="24" y="265" width="366" height="1"/>
                                 <color key="backgroundColor" name="Grey1Line"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="qvH-yM-D38"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOX-1A-89v">
-                                <rect key="frame" x="24" y="794" width="366" height="48"/>
-                                <color key="backgroundColor" name="Grey1Bg"/>
+                            <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wOX-1A-89v">
+                                <rect key="frame" x="24" y="802" width="366" height="40"/>
+                                <color key="backgroundColor" name="YellowIcon"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="Mrt-Ui-IcW"/>
+                                    <constraint firstAttribute="height" constant="40" id="Mrt-Ui-IcW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
-                                <state key="normal" title="완료">
+                                <state key="normal" title="인증번호 확인">
                                     <color key="titleColor" name="White"/>
                                 </state>
                                 <connections>
                                     <action selector="touchCompleteButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="KU0-7c-mrU"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QG1-sf-yka">
-                                <rect key="frame" x="184.5" y="776" width="45.5" height="8"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circleGray" translatesAutoresizingMaskIntoConstraints="NO" id="zp3-xX-Ogb">
-                                        <rect key="frame" x="0.0" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circlePink" translatesAutoresizingMaskIntoConstraints="NO" id="SGY-BZ-h3s">
-                                        <rect key="frame" x="18.5" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circleGray" translatesAutoresizingMaskIntoConstraints="NO" id="61i-lB-kSV">
-                                        <rect key="frame" x="37" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증에 실패하였습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zv5-0n-zId">
-                                <rect key="frame" x="300.5" y="274" width="89.5" height="12"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증번호를 다시 입력해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zv5-0n-zId">
+                                <rect key="frame" x="271.5" y="278" width="118.5" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" name="Red"/>
                                 <nil key="highlightedColor"/>
@@ -86,12 +78,10 @@
                             <constraint firstItem="C2e-eM-amu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="8QC-oc-EGi"/>
                             <constraint firstItem="U0H-qs-Fvj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="9Np-9i-03Q"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="C2e-eM-amu" secondAttribute="trailing" constant="24" id="Dth-hw-nFs"/>
-                            <constraint firstItem="unh-NZ-zQn" firstAttribute="top" secondItem="U0H-qs-Fvj" secondAttribute="bottom" constant="54" id="E3D-qd-uoi"/>
-                            <constraint firstItem="C2e-eM-amu" firstAttribute="top" secondItem="unh-NZ-zQn" secondAttribute="bottom" constant="32" id="Gfn-Xc-e6z"/>
-                            <constraint firstItem="wOX-1A-89v" firstAttribute="top" secondItem="QG1-sf-yka" secondAttribute="bottom" constant="10" id="RRb-EZ-eCK"/>
-                            <constraint firstItem="QG1-sf-yka" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="RXW-Eg-ZVp"/>
+                            <constraint firstItem="unh-NZ-zQn" firstAttribute="top" secondItem="U0H-qs-Fvj" secondAttribute="bottom" constant="16" id="E3D-qd-uoi"/>
+                            <constraint firstItem="C2e-eM-amu" firstAttribute="top" secondItem="unh-NZ-zQn" secondAttribute="bottom" constant="97" id="Gfn-Xc-e6z"/>
                             <constraint firstItem="Zv5-0n-zId" firstAttribute="top" secondItem="tFP-bz-viz" secondAttribute="bottom" constant="12" id="Yny-n0-mjI"/>
-                            <constraint firstItem="tFP-bz-viz" firstAttribute="top" secondItem="C2e-eM-amu" secondAttribute="bottom" constant="10" id="dKy-6f-pyu"/>
+                            <constraint firstItem="tFP-bz-viz" firstAttribute="top" secondItem="C2e-eM-amu" secondAttribute="bottom" constant="8" id="dKy-6f-pyu"/>
                             <constraint firstItem="tFP-bz-viz" firstAttribute="leading" secondItem="C2e-eM-amu" secondAttribute="leading" id="gV5-ee-0eo"/>
                             <constraint firstItem="wOX-1A-89v" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="kQp-66-FBd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wOX-1A-89v" secondAttribute="trailing" constant="24" id="s1h-bp-fvE"/>
@@ -104,6 +94,7 @@
                         <outlet property="codeTextField" destination="C2e-eM-amu" id="XHp-e2-fu4"/>
                         <outlet property="completeButton" destination="wOX-1A-89v" id="ZoJ-S5-FSN"/>
                         <outlet property="errorLabel" destination="Zv5-0n-zId" id="FgY-mI-c3b"/>
+                        <outlet property="underlineView" destination="tFP-bz-viz" id="yXn-f7-fww"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -112,13 +103,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="circleGray" width="8.5" height="8"/>
-        <image name="circlePink" width="8.5" height="8"/>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Grey1Bg">
-            <color red="0.90600001811981201" green="0.90600001811981201" blue="0.90600001811981201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Grey1Line">
             <color red="0.92500001192092896" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -128,6 +114,12 @@
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YellowIcon">
+            <color red="1" green="0.77999997138977051" blue="0.3529999852180481" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="black4Text">
+            <color red="0.67500001192092896" green="0.67500001192092896" blue="0.67500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
