[#310] 내 서랍장 리디자인
### Description
- custom pickerView 레이아웃 수정
- modal viewController background 수정 (blurEffect 제거)
- 컬렉션뷰 셀 교체
- 첫번째 셀 분기 처리

### Related Issue
Resolve #310

--- a/Journey/Journey/Resources/Storyboards/Feed/MyDrawer.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/MyDrawer.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,21 +19,21 @@
             <objects>
                 <viewController storyboardIdentifier="MyDrawerViewController" id="J5K-NX-aaL" customClass="MyDrawerViewController" customModule="Journey" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1M4-ne-a5X">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ukv-yO-ePW">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgemptyhappy" translatesAutoresizingMaskIntoConstraints="NO" id="Reb-8C-0zW">
-                                        <rect key="frame" x="127" y="329" width="160" height="160"/>
+                                        <rect key="frame" x="220" y="220" width="160" height="160"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="160" id="Nlb-bA-Fib"/>
                                             <constraint firstAttribute="height" constant="160" id="YpC-zS-AZl"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아직 당신의 소확행을 담아두지 않았군 챌린지를 성공하고 소확행을 작성해보겠어?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGa-F4-ecv">
-                                        <rect key="frame" x="105" y="527" width="204" height="28"/>
+                                        <rect key="frame" x="198" y="418" width="204" height="28"/>
                                         <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                         <color key="textColor" name="black4Text"/>
                                         <nil key="highlightedColor"/>
@@ -49,7 +48,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="33I-LQ-tdY">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ph7-Nz-irN">
                                     <size key="itemSize" width="128" height="128"/>
@@ -68,7 +67,7 @@
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="6mV-5X-2jy" customClass="MyDrawerCollectionReusableView" customModule="Journey" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </collectionReusableView>
                             </collectionView>
@@ -88,7 +87,7 @@
                     </view>
                     <connections>
                         <outlet property="emptyView" destination="Ukv-yO-ePW" id="Y3F-Tu-oJk"/>
-                        <outlet property="myHappinessCollectionView" destination="33I-LQ-tdY" id="sWk-LA-vOy"/>
+                        <outlet property="feedCollectionView" destination="33I-LQ-tdY" id="sWk-LA-vOy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vl6-gw-4Ux" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
