--- a/Journey/Journey/Sources/Views/MyDrawerCollectionReusableView.xib
+++ b/Journey/Journey/Sources/Views/MyDrawerCollectionReusableView.xib
@@ -8,8 +8,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="SpoqaHanSansNeo-Bold.otf">
-            <string>SpoqaHanSansNeo-Bold</string>
+        <array key="GmarketSansTTFMedium.ttf">
+            <string>GmarketSansTTFMedium</string>
         </array>
     </customFonts>
     <objects>
@@ -23,26 +23,36 @@
                     <rect key="frame" x="0.0" y="0.0" width="331" height="80"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21년 06월 소확행" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-74-mHL">
-                            <rect key="frame" x="24" y="29" width="142.5" height="23.5"/>
-                            <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="20"/>
+                            <rect key="frame" x="24" y="30.5" width="114" height="19"/>
+                            <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="16"/>
                             <color key="textColor" name="Black1Text"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vy6-0d-YVb">
-                            <rect key="frame" x="170.5" y="29" width="20" height="22"/>
+                            <rect key="frame" x="142" y="29" width="20" height="22"/>
                             <color key="tintColor" name="hotPink"/>
                             <state key="normal" image="btnDown"/>
                             <connections>
                                 <action selector="touchCalendarButton:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="IZo-wy-aWa"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a4Y-Ef-v0I">
+                            <rect key="frame" x="0.0" y="79" width="331" height="1"/>
+                            <color key="backgroundColor" red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="Gef-uB-3mU"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="unJ-74-mHL" firstAttribute="leading" secondItem="WTO-1t-KlT" secondAttribute="leading" constant="24" id="5wM-UU-sim"/>
-                        <constraint firstItem="vy6-0d-YVb" firstAttribute="top" secondItem="WTO-1t-KlT" secondAttribute="top" constant="29" id="Ae6-Pc-VIq"/>
+                        <constraint firstAttribute="bottom" secondItem="a4Y-Ef-v0I" secondAttribute="bottom" id="6tx-cp-Aqq"/>
+                        <constraint firstItem="a4Y-Ef-v0I" firstAttribute="leading" secondItem="WTO-1t-KlT" secondAttribute="leading" id="BLb-hy-Kbl"/>
+                        <constraint firstItem="unJ-74-mHL" firstAttribute="centerY" secondItem="WTO-1t-KlT" secondAttribute="centerY" id="FQe-Mo-V1F"/>
+                        <constraint firstAttribute="trailing" secondItem="a4Y-Ef-v0I" secondAttribute="trailing" id="R5b-dR-KZk"/>
                         <constraint firstItem="vy6-0d-YVb" firstAttribute="leading" secondItem="unJ-74-mHL" secondAttribute="trailing" constant="4" id="UW4-kL-QlM"/>
-                        <constraint firstItem="unJ-74-mHL" firstAttribute="top" secondItem="WTO-1t-KlT" secondAttribute="top" constant="29" id="yiP-9H-cuI"/>
+                        <constraint firstItem="vy6-0d-YVb" firstAttribute="centerY" secondItem="unJ-74-mHL" secondAttribute="centerY" id="oKw-Mh-dee"/>
                     </constraints>
                 </view>
             </subviews>
