--- a/Journey/Journey/Resources/Storyboards/Auth/EmailLogin.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/EmailLogin.storyboard
@@ -30,18 +30,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="예) mohaeng@gmail.com" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whW-Mh-qnf">
-                                <rect key="frame" x="24" y="198" width="366" height="18.5"/>
+                                <rect key="frame" x="24" y="198" width="366" height="19"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8f-hY-e8b">
-                                <rect key="frame" x="28" y="260.5" width="42" height="14.5"/>
+                                <rect key="frame" x="28" y="261" width="42" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" name="Black3Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fQ-wx-2n9">
-                                <rect key="frame" x="24" y="383" width="366" height="40"/>
+                                <rect key="frame" x="24" y="383.5" width="366" height="40"/>
                                 <color key="backgroundColor" name="LoginYellow"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Lw8-6O-y7l"/>
@@ -55,12 +55,12 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 입력" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="aQ1-BW-exP">
-                                <rect key="frame" x="24" y="283" width="366" height="17"/>
+                                <rect key="frame" x="24" y="283.5" width="366" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rYV-FS-ex0">
-                                <rect key="frame" x="159.5" y="439" width="95" height="24"/>
+                                <rect key="frame" x="159.5" y="439.5" width="95" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <state key="normal" title="비밀번호를 잊으셨나요?">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,7 +70,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azN-Xq-jJY">
-                                <rect key="frame" x="159.5" y="456" width="95" height="1"/>
+                                <rect key="frame" x="159.5" y="456.5" width="95" height="1"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="95" id="GxN-w4-dO1"/>
@@ -78,11 +78,25 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 계정 또는 비밀번호를 다시 확인해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-Gl-TIl">
-                                <rect key="frame" x="202" y="312" width="188" height="12"/>
+                                <rect key="frame" x="202" y="321.5" width="188" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="0.96078431369999995" green="0.0078431372550000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0MS-Id-6ar">
+                                <rect key="frame" x="24" y="308.5" width="366" height="1"/>
+                                <color key="backgroundColor" name="Grey5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="YA9-5D-QYw"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8k1-OZ-i15">
+                                <rect key="frame" x="24" y="225" width="366" height="1"/>
+                                <color key="backgroundColor" name="Grey5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Qv9-YS-Piq"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -94,14 +108,22 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2fQ-wx-2n9" secondAttribute="trailing" constant="24" id="Iak-s9-fpF"/>
                             <constraint firstItem="azN-Xq-jJY" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="JOV-w0-XuG"/>
                             <constraint firstItem="0e6-Gl-TIl" firstAttribute="trailing" secondItem="aQ1-BW-exP" secondAttribute="trailing" id="Jpv-RV-La1"/>
+                            <constraint firstItem="8k1-OZ-i15" firstAttribute="top" secondItem="whW-Mh-qnf" secondAttribute="bottom" constant="8" id="KjJ-UV-BF7"/>
+                            <constraint firstItem="0MS-Id-6ar" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="4" id="LIU-ei-fXB"/>
                             <constraint firstItem="azN-Xq-jJY" firstAttribute="top" secondItem="2fQ-wx-2n9" secondAttribute="bottom" constant="33" id="LqJ-yH-IPb"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="whW-Mh-qnf" secondAttribute="trailing" constant="24" id="OSb-gh-8EY"/>
                             <constraint firstItem="aQ1-BW-exP" firstAttribute="top" secondItem="c8f-hY-e8b" secondAttribute="bottom" constant="8" id="Rd3-pL-HFe"/>
+                            <constraint firstItem="8k1-OZ-i15" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="SgU-7k-mkn"/>
+                            <constraint firstItem="0MS-Id-6ar" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="8" id="UZe-A0-LDU"/>
                             <constraint firstItem="odr-lE-3x5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="WwO-Xv-ms5"/>
+                            <constraint firstItem="0MS-Id-6ar" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="eMb-dP-Kgh"/>
+                            <constraint firstItem="0e6-Gl-TIl" firstAttribute="top" secondItem="0MS-Id-6ar" secondAttribute="bottom" constant="12" id="eTs-Pj-S4m"/>
+                            <constraint firstItem="8k1-OZ-i15" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="4" id="f3x-Fa-lBj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0MS-Id-6ar" secondAttribute="trailing" constant="4" id="heF-wZ-nFj"/>
                             <constraint firstItem="JWK-RE-JXu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="28" id="iJi-S0-gU0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8k1-OZ-i15" secondAttribute="trailing" constant="4" id="mVW-fn-GKI"/>
                             <constraint firstItem="rYV-FS-ex0" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oIV-YD-gP7"/>
                             <constraint firstItem="2fQ-wx-2n9" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="83" id="ptb-3A-Bj0"/>
-                            <constraint firstItem="0e6-Gl-TIl" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="12" id="qtU-Ye-RLP"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aQ1-BW-exP" secondAttribute="trailing" constant="24" id="so9-Ic-IZ8"/>
                             <constraint firstItem="odr-lE-3x5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="32" id="t2K-wU-X9E"/>
                             <constraint firstItem="2fQ-wx-2n9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="tXp-Ov-K73"/>
@@ -112,22 +134,27 @@
                     </view>
                     <connections>
                         <outlet property="doLoginButton" destination="2fQ-wx-2n9" id="GVe-mB-R1e"/>
+                        <outlet property="emailBottomView" destination="8k1-OZ-i15" id="Th8-2U-Qn3"/>
                         <outlet property="emailLabel" destination="JWK-RE-JXu" id="Zwf-FI-rqP"/>
                         <outlet property="emailTextField" destination="whW-Mh-qnf" id="qqy-j4-Rag"/>
                         <outlet property="errorLabel" destination="0e6-Gl-TIl" id="eQj-TK-rId"/>
                         <outlet property="findPasswordButton" destination="rYV-FS-ex0" id="oiY-5p-WXf"/>
+                        <outlet property="passwordBottonView" destination="0MS-Id-6ar" id="Cd3-w8-RYK"/>
                         <outlet property="passwordLabel" destination="c8f-hY-e8b" id="Pdg-PF-Atx"/>
                         <outlet property="passwordTextField" destination="aQ1-BW-exP" id="fth-Uh-eLU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="46" y="48"/>
+            <point key="canvasLocation" x="44.927536231884062" y="47.544642857142854"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="Black3Text">
             <color red="0.49799999594688416" green="0.49799999594688416" blue="0.49799999594688416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Grey5">
+            <color red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="LoginYellow">
             <color red="1" green="0.94901960784313721" blue="0.81568627450980391" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
